test_suite/tests/ui/unexpected-literal/empty_args.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde()]
struct S;

fn main() {}
